Create and style loader.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <link rel="stylesheet" href="style.css" />
     <title>Loader | Spinner</title>
   </head>
-  <body></body>
+  <body>
+    <div class="loader">
+      <div class="loader-inner"></div>
+    </div>
+  </body>
 </html>
